
    o	R CMD check no longer loads package 'tcltk' when checking for
	code problems, so more problems may be reported.

    o	R CMD SHLIB now calls the makefiles with target 'all' on all
	platforms, not just on Windows: this is only relevant when a
	Makevars[.win] is used that contains targets (not in general
	recommended): for backwards compatibility the first target
	should be named 'all'.


Rd CONVERSION

    o	Rd files have an optional \Rdversion{} section, which if
	missing defaults to 1.0.  There is support for version 1.1, a
	slightly modified version with the following changes:

	- The warnings for \code{} inside example are suppressed.

	- Whitespace between arguments in \item and \section is
          accepted without a warning (see below).

	- $ is treated literally in text, even for latex conversions.

	- \ is only an escape before % { } \ .

	- \R, \dots and \ldots can be followed by {}, and it is
          recommended that they when not followed by whitespace.

	- The obsolete interpretation of \Alpha etc is no longer done.

    o	Rd conversion now handles ^ ~ < > | correctly in non-code
	environments (such as \samp), and # and _ even in latex
	conversion (but $ still needs to be escaped in version 1.0).

    o	Whitespace between first and second arguments is now accepted
	for \item and \section, e.g.  \item{foo} {some value}.
	Previously arguments after whitespace were silently ignored,
	and a warning is given for version 1.0 files.

    o	The Rd files created by prompt() and friends are declared to be
	version 1.1.

    o	\alias now supports the escaping of { as well as of %, and this
	is recommended.

    o	parse_Rd(), an experimental parser for Rd files, and Rd2txt(),
	Rd2HTML(), Rd2latex() and Rd2ex(), even more experimental
	converters, have been added to package 'tools'.

    o	R CMD check runs the package's Rd files through parse_Rd() for a
	stricter syntax check.  This can be suppressed by setting
	_R_CHECK_RD_PARSE_ to FALSE.
