@@ -596,7 +596,7 @@ The @file{R} and @file{man} subdirectories may contain OS-specific
 subdirectories named @file{unix} or @file{windows}.
 
 The sources and headers for the compiled code are in @file{src}, plus
-optionally file @file{Makevars} or @file{Makefile}.  When a package is
+optionally a file @file{Makevars} or @file{Makefile}.  When a package is
 installed using @code{R CMD INSTALL}, Make is used to control
 compilation and linking into a shared object for loading into @R{}.
 There are default variables and rules for this (determined when @R{} is
@@ -608,11 +608,13 @@ FORTRAN-77 (which we write in upper case) is supported on all platforms,
 but most also support Fortran-95 (for which we use title case).  If you
 want to ship Ratfor source files, please do so in a subdirectory of
 @file{src} and not in the main subdirectory.}, Objective C and Objective
-C++ with associated extensions @file{.c}, @file{.cc} or @file{.cpp} or
-@file{.C}, @file{.f}, @file{.f90} or @file{.f95}, @file{.m}, and
-@file{.mm} or @file{.M}, respectively.  We recommend using @file{.h} for
-headers, also for C++@footnote{Using @file{.hpp}, although somewhat
-popular, is not guaranteed to be portable.} or Fortran 9x include files.
+C++@footnote{either or both of which may not be supported on particular
+platforms} with associated extensions @file{.c}, @file{.cc} or
+@file{.cpp} or @file{.C}, @file{.f}, @file{.f90} or @file{.f95},
+@file{.m}, and @file{.mm} or @file{.M}, respectively.  We recommend
+using @file{.h} for headers, also for C++@footnote{Using @file{.hpp},
+although somewhat popular, is not guaranteed to be portable.} or Fortran
+9x include files.
 
 It is not portable (and may not be possible at all) to mix all these
 languages in a single package, and we do not support using both C++ and
@@ -624,12 +626,13 @@ The default rules can be tweaked by setting macros in a file
 should be general enough to eliminate the need for a package-specific
 @file{src/Makefile}.  If such a file is to be distributed, considerable
 care is needed to make it general enough to work on all @R{} platforms.
-It should have an appropriate first target (conventionally called
-@samp{all}) and a (possibly empty) target @samp{clean} which removes all
-files generated by Make (to be used by @samp{R CMD INSTALL --clean} and
-@samp{R CMD INSTALL --preclean}).  There are platform-specific file
-names on Windows: @file{src/Makevars.win} takes precedence over
-@file{src/Makevars} and @file{src/Makefile.win} must be used.
+If it has any targets at all, it should have an appropriate first target
+named @samp{all} and a (possibly empty) target @samp{clean} which
+removes all files generated by Make (to be used by @samp{R CMD INSTALL
+--clean} and @samp{R CMD INSTALL --preclean}).  There are
+platform-specific file names on Windows: @file{src/Makevars.win} takes
+precedence over @file{src/Makevars} and @file{src/Makefile.win} must be
+used.
 
 The @file{data} subdirectory is for additional data files the package
 makes available for loading using @code{data()}.  Currently, data files
@@ -1032,11 +1035,9 @@ conjuction with an @code{all} target as described in the next paragraph).
 Note that @file{Makevars} should not normally contain targets, as it is
 included before the default makefile and @command{make} is called with
 target @code{all} which is defined in the default makefile.  If you
-really need to circumvent that, use@footnote{The @code{all} targets are
-not needed in this example in @R{} 2.9.0: they were for Unix in earlier
-versions, and might be in future ones.}  a suitable (phony) target
-@code{all} before any actual targets in @file{Makevars.[win]}: for
-example package @pkg{fastICA} has
+really need to circumvent that, use a suitable (phony) target @code{all}
+before any actual targets in @file{Makevars.[win]}: for example package
+@pkg{fastICA} has
 
 @smallexample
 PKG_LIBS = @@BLAS_LIBS@@
@@ -1138,7 +1139,8 @@ all: before $(SHLIB) after
 @end example
 
 @noindent
-omitting @code{bwfore} or @code{after} if they are unused.
+omitting @code{bwfore} or @code{after} if they are unused.  Note however
+that this is not compatible with the use of a parallel make.
 
 Some packages used undocumented macros under Windows, notably
 @samp{DPKG} (use @env{R_PACKAGE_DIR} instead).
